# findmy-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_scan.py  custom_filters.py
src/findmy_mcp/: __init__.py  cli.py  config.py  filters.json  models.py  scanner.py  verifier.py
tests/: __init__.py  test_models.py
