[project]
name = "findmy-mcp"
version = "1.0.0"
description = "Fast, concurrent MCP server discovery and analysis tool for security research"
readme = "README.md"
authors = [
    { name = "sebastian", email = "44591891+cbxss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "shodan>=1.31.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-scan = "findmy_mcp.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T20", "RET", "SIM", "ARG"]
ignore = [
    "E501",  # Line too long
    "B904",  # Within except clause - acceptable for CLI
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]  # Allow print statements in examples
"src/findmy_mcp/cli.py" = ["ARG001"]  # Allow unused callback args

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
